--- a/src/frontend/palindrome-search/src/app/search/search.component.html
+++ b/src/frontend/palindrome-search/src/app/search/search.component.html
@@ -1,7 +1,34 @@
 <h2>Products Search</h2>
 <form [formGroup]="searchForm" (ngSubmit)="submitSearchForm()">
-    <div class="formGroup">
-        <input class="form-control" formControlName="phrase">
-        <button type="submit" class="btn btn-success" [disabled]="!searchForm.valid">Search</button>
+  <div class="formGroup input-group">
+    <input class="form-control" formControlName="phrase">
+    <div class="input-group-prepend">
+      <button [disabled]="!searchForm.valid" class="btn btn-success " type="submit">Search</button>
     </div>
+  </div>
+
+  <div *ngFor="let product of searchResult.content" class="card" style="width: 18rem;">
+    <img class="card-img-top" src="http://{{product.imageUrl}}">
+    <div class="card-body">
+      <h5 class="card-title">{{product.brand}}</h5>
+      <p class="card-text">{{product.description}}</p>
+      <p class="card-text">{{product.price}}</p>
+      <p class="card-text">{{product.percentageOfDiscount}}</p>
+      <p class="card-text">{{product.priceMinusDiscount}}</p>
+      <button class="btn btn-primary" id="{{product.id}}">Agregar</button>
+    </div>
+  </div>
+  <div>
+    <nav aria-label="...">
+      <ul class="pagination justify-content-center">
+        <li class="page-item"><a class="page-link" href="#">Previous</a></li>
+        <li class="page-item"><a class="page-link" href="#">1</a></li>
+        <li class="page-item"><a class="page-link" href="#">2</a></li>
+        <li class="page-item"><a class="page-link" href="#">3</a></li>
+        <li class="page-item"><a class="page-link" href="#">Next</a></li>
+      </ul>
+    </nav>
+  </div>
+
+
 </form>
