--- a/src/frontend/palindrome-search/src/styles.css
+++ b/src/frontend/palindrome-search/src/styles.css
@@ -1,1 +1,23 @@
 /* You can add global styles to this file, and also import other style files */
+/*
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+body {
+  font-family: Roboto, Arial, sans-serif;
+  margin: 0;
+}
+.basic-container {
+  padding: 30px;
+}
+.version-info {
+  font-size: 8pt;
+  float: right;
+  margin: 8px;
+}
+*/
+
+
+@import 'assets/css/iconfont.css';
+@import 'assets/css/main.css';
+@import 'assets/css/wmt.css';
