--- a/src/frontend/palindrome-search/src/app/search/search.component.html
+++ b/src/frontend/palindrome-search/src/app/search/search.component.html
@@ -1,5 +1,6 @@
 <div class="col-lg-9 col-md-8 col-sm-12 col-padding-12">
   <h2>Products Search</h2>
+  <div *ngIf="searchResult.errorMessage" class="alert alert-danger" role="alert">{{searchResult.errorMessage}}</div>
   <form [formGroup]="searchForm" (ngSubmit)="submitSearchForm()">
     <div class="formGroup input-group">
       <input class="form-control" formControlName="phrase" placeholder="Type what you want to search">
@@ -10,14 +11,17 @@
 
     <div class="shop-content">
       <div class="ais-Hits" style>
+        <div *ngIf="searchPhrase">
+          <h3>Result for <b>{{searchPhrase}}</b>:</h3>
+        </div>
         <ul class="ais-Hits-list">
           <li *ngFor="let product of searchResult.content" class="ais-Hits-item">
             <div class>
               <div class="rct-block  product-block flex-column justify-content-between overflow-hidden bg-white">
                 <a href="/product/sku/{{product.id}}"
-                  style="text-decoration: none; height: 100%; display: inline; background-color: white;">
+                   style="text-decoration: none; height: 100%; display: inline; background-color: white;">
                   <div class="overlay-wrap overflow-hidden bg-white" id="{{product.id}}"
-                    style="display: flex; align-items: center; justify-content: center; max-height: 240px; min-height: 200px; width: 100%;">
+                       style="display: flex; align-items: center; justify-content: center; max-height: 240px; min-height: 200px; width: 100%;">
                     <div class="text-center">
                       <div class="product-image-shadow"></div>
                       <div class="d-flex labels-container">
@@ -75,12 +79,10 @@
             </div>
           </li>
         </ul>
-
-        <ngb-pagination [(page)]="currentPage" [collectionSize]="searchResult.totalPages"
-          [pageSize]="searchResult.pageable.pageSize" class="pagination justify-content-center">
-        </ngb-pagination>
-
       </div>
+      <ngb-pagination [(page)]="currentPage" [collectionSize]="searchResult.totalPages"
+                      [pageSize]="searchResult.pageable.pageSize" class="pagination justify-content-center">
+      </ngb-pagination>
     </div>
   </form>
 </div>
